# arg_router

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  algorithm_8hpp_source.html  alias_8hpp_source.html  alias__group_8hpp_source.html  annotated.html  annotated_dup.js  architecture.html  architecture_8doxy_source.html  arg_8hpp_source.html  arg__router_8hpp_source.html  basic__types_8hpp_source.html  basic_cat_2main_8cpp-example.html  c_09_0917_2basic_cat_2main_8cpp-example.html  c_09_0917_2custom_policy_and_node_2main_8cpp-example.html  c_09_0917_2just_cats_2main_8cpp-example.html  c_09_0917_2launcher_2main_8cpp-example.html  c_09_0917_2runtime_node_enable_2main_8cpp-example.html  c_09_0917_2simple_2main_8cpp-example.html  c_09_0917_2simple_ml_2main_8cpp-example.html  c_09_0917_2simple_ml_gen_2main_8cpp-example.html  c_09_0920_2basic_cat_2main_8cpp-example.html  c_09_0920_2custom_policy_and_node_2main_8cpp-example.html  c_09_0920_2just_cats_2main_8cpp-example.html  c_09_0920_2launcher_2main_8cpp-example.html  c_09_0920_2runtime_node_enable_2main_8cpp-example.html  c_09_0920_2simple_2main_8cpp-example.html  c_09_0920_2simple_ml_2main_8cpp-example.html  c_09_0920_2simple_ml_gen_2main_8cpp-example.html  classarg__router_1_1add__missing__min__max__policy-members.html  classarg__router_1_1add__missing__min__max__policy.html  classarg__router_1_1add__missing__min__max__policy.js  classarg__router_1_1algorithm_1_1count__despecialised-members.html  classarg__router_1_1algorithm_1_1count__despecialised.html  (+1123 more)
.github/: filters.yml
.github/workflows/: docs_pusher.yml  merge_checker.yml  pr_checker.yml  release_builder.yml
ci/: calculate_test_coverage.sh  create_badge_url.sh  old_coverage  vcpkg_package_updater.ps1  vcpkg_package_updater.sh
ci/conan_test_project/: CMakeLists.txt  conanfile.py  main.cpp
ci/package_test_project/: CMakeLists.txt  vcpkg.json
ci/vcpkg_test_project/: CMakeLists.txt  main.cpp  vcpkg.json
cmake/: ccache.cmake  clang-format.cmake  clang-tidy.cmake  config.cmake  copyright_checker.cmake  path_prefixer.cmake  sanitizers.cmake  translation_generator.cmake
cmake/build_types/: ast.cmake  death_test.cmake  documentation.cmake  documentation_script.cmake  library.cmake  library_coverage.cmake  unit_test.cmake  unit_test_coverage.cmake
cmake/config/: config.cmake  config.hpp.in  config_script.cmake
cmake/package/: arg_router-config.cmake.in  install.cmake
cmake/translation_generator/: translation_generator.cmake  translation_generator_script.cmake
cmake/triplets/: x86-linux.cmake
cmake/versioning/: version.cmake  version.hpp.in  version_script.cmake
docs/: Doxyfile  header.html
docs/related_pages/: architecture.doxy  configuration.doxy  error_handling.doxy  examples.doxy  help.doxy  nodes.doxy  policies.doxy  validation.doxy
examples/: CMakeLists.txt
examples/basic_cat/: CMakeLists.txt  main.cpp
examples/c++17/: CMakeLists.txt
examples/c++17/basic_cat/: CMakeLists.txt  main.cpp
examples/c++17/custom_policy_and_node/: CMakeLists.txt  main.cpp
examples/c++17/just_cats/: CMakeLists.txt  main.cpp
examples/c++17/launcher/: CMakeLists.txt  main.cpp
examples/c++17/runtime_node_enable/: CMakeLists.txt  main.cpp
examples/c++17/simple/: CMakeLists.txt  main.cpp
examples/c++17/simple_ml/: CMakeLists.txt  main.cpp
examples/c++17/simple_ml_gen/: CMakeLists.txt  main.cpp
examples/c++20/: CMakeLists.txt
examples/c++20/basic_cat/: CMakeLists.txt  main.cpp
examples/c++20/custom_policy_and_node/: CMakeLists.txt  main.cpp
examples/c++20/just_cats/: CMakeLists.txt  main.cpp
examples/c++20/launcher/: CMakeLists.txt  main.cpp
examples/c++20/runtime_node_enable/: CMakeLists.txt  main.cpp
examples/c++20/simple/: CMakeLists.txt  main.cpp
examples/c++20/simple_ml/: CMakeLists.txt  main.cpp
examples/c++20/simple_ml_gen/: CMakeLists.txt  main.cpp
examples/custom_policy_and_node/: CMakeLists.txt  main.cpp
examples/just_cats/: CMakeLists.txt  main.cpp
examples/launcher/: CMakeLists.txt  main.cpp
examples/resources/simple_ml_gen/: en_GB.toml  fr.toml  ja.toml
examples/runtime_node_enable/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
examples/simple_ml/: CMakeLists.txt  main.cpp
examples/simple_ml_gen/: CMakeLists.txt  main.cpp
gcov_html/: index-sort-l.html  index.html
gcov_html/arg_router/: algorithm.hpp.gcov.html  arg.hpp.gcov.html  counting_flag.hpp.gcov.html  exception.hpp.gcov.html  flag.hpp.gcov.html  forwarding_arg.hpp.gcov.html  help.hpp.gcov.html  index-sort-l.html  index.html  (+9 more)
scripts/: copyright_checker.py  pre-commit  unicode_table_generators.py
scripts/ci/conan_test_project/: CMakeLists.txt  conanfile.txt
scripts/ci/package_test_project/: CMakeLists.txt  vcpkg.json
scripts/ci/vcpkg_test_project/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+86 more)
src/: exception.cpp  global_parser.cpp  parsing.cpp  token_type.cpp
test/: .clang-tidy  CMakeLists.txt  algorithm_test.cpp  allocator_test.cpp  arg_test.cpp  calculate_test_coverage.sh  counting_flag_same_prefix_test.cpp  counting_flag_test.cpp  create_badge_url.sh  dynamic_token_adapter_test.cpp  flag_same_prefix_test.cpp  flag_test.cpp  forwarding_arg_test.cpp  global_parser_test.cpp  help_test.cpp  list_test.cpp  main_test.cpp  math_test.cpp  mode_test.cpp  multi_arg_test.cpp  node_category_test.cpp  old_coverage  parsing_test.cpp  positional_arg_test.cpp  root_test.cpp  test_helpers.cpp  test_helpers.hpp  test_printers.hpp  token_list_test.cpp  traits_test.cpp  translation_generator_test.cpp  tree_node_test.cpp
(+256 files in other folders)
