### Copyright (C) 2022-2023 by Camden Mannett.
### Distributed under the Boost Software License, Version 1.0.
### (See accompanying file LICENSE or copy at https://www.boost.org/LICENSE_1_0.txt)

add_custom_target(cpp17_examples)

add_subdirectory(basic_cat)
add_subdirectory(custom_policy_and_node)
add_subdirectory(just_cats)
add_subdirectory(launcher)
add_subdirectory(runtime_node_enable)
add_subdirectory(simple)
add_subdirectory(simple_ml)
